--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "dev-tw": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.10",
-    "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-star-ratings": "^2.3.0",
-    "shadcn-ui": "^0.9.1"
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
